# Computer-Vision-Platform

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
scripts/: export.py
src/: bounding_box_visualization.py  db.py  detections.py  image_processor.py  onnx_backend.py  yolo11.py
static/css/: styles.css
templates/: gallery.html  history.html  index.html
testing_scripts/: bounding_boxes_test.py  detections_test.py
