[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Computer-Vision-Platform"
version = "0.1.0"
description = "Object detection API with FastAPI, ONNX Runtime, and MySQL"
authors = [{name = "Aliaksandr Marchuk", email = "aliaksandrmarchuk369@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "onnxruntime>=1.19.0",
    "ultralytics>=8.3.0",
    "mysql-connector-python>=9.1.0",
    "numpy>=1.24.0",
    "mlflow>=2.15.0",
    "onnxscript>=0.1.0",
    "opencv-python>=4.9.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]