[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Computer-Vision-Platform"
version = "0.1.0"
description = "Object detection API with FastAPI, ONNX Runtime, and MySQL"
authors = [{name = "Aliaksandr Marchuk", email = "aliaksandrmarchuk369@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
    "python-multipart>=0.0.26",
    "onnxruntime>=1.24.4",
    "onnx>=1.21.0",
    "onnxscript>=0.7.0",
    "ultralytics>=8.4.41",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.4",
    "mlflow>=3.11.1",
    "opencv-python>=4.13.0.92",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]